--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,28 +3,30 @@ version: '3'
 networks:
   ldap_network:
     driver: bridge
+
 services:
   openldap:
     image: osixia/openldap:latest
     container_name: openldap
     environment:
-      LDAP_BASE_DN: "dc=example,dc=org"
-      LDAP_ORGANISATION: "Example Organization"
-      LDAP_DOMAIN: "example.org"
+      LDAP_BASE_DN: "dc=sanchez,dc=org"          # Change base DN
+      LDAP_ORGANISATION: "Sanchez Organization"   # Change organization name
+      LDAP_DOMAIN: "sanchez.org"                 # Change domain name
       LDAP_ADMIN_PASSWORD: "admin"
-      LDAP_TLS: "false"             # deactivate TLS for the LDAP server
+      LDAP_TLS: "false"                          # Deactivate TLS for the LDAP server
     networks:
       - ldap_network
     ports:
-      - "389:389"                   # default port for unsecured LDAP
+      - "389:389"                               # Default port for unsecured LDAP
     command: --copy-service
     restart: unless-stopped
+
   phpldapadmin:
     image: osixia/phpldapadmin:latest
     container_name: phpldapadmin
     environment:
       PHPLDAPADMIN_LDAP_HOSTS: openldap
-      PHPLDAPADMIN_HTTPS: "false"   # deactivate HTTPS
+      PHPLDAPADMIN_HTTPS: "false"               # Deactivate HTTPS
     networks:
       - ldap_network
     ports:
